# cloth-simulation

./: .gitignore  CMakeLists.txt
src/: App.cpp  App.hpp  Main.cpp
src/entities/: Entity.hpp  Plane.cpp  Plane.hpp
src/graphics/: Shader.cpp
src/utility/: Camera.cpp  Camera.hpp
